--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
-// {
-//       "name": "todo-list-app",
-//       "version": "1.0.0",
-//       "description": "",
-//       "scripts": {
-//           "frontend": "cd frontend; npm start",
-//           "backend": "cd backend; nodemon server.js",
-//           "build": "echo \"No build specified\" && exit 1",
-//           "test": "echo \"No test specified\" && exit 1",
-//           "start": "cd frontend; npm index.js"
-//       },
-//      "repository": {
-//           "type": "git",
-//           "url": "git+https://github.com/manan-Abdul1/todo-list-app.git"
-//       },
-//       "author": "",
-//       "license": "ISC",
-//       "bugs": {
-//           "url": "https://github.com/manan-Abdul1/todo-list-app/issues"
-//      },
-//       "homepage": "https://github.com/manan-Abdul1/todo-list-app#readme"
-//   }
+{
+      "name": "todo-list-app",
+      "version": "1.0.0",
+      "description": "",
+      "scripts": {
+          "frontend": "cd frontend; npm start",
+          "backend": "cd backend; nodemon server.js",
+          "build": "echo \"No build specified\" && exit 1",
+          "test": "echo \"No test specified\" && exit 1",
+          "start": "cd frontend; npm index.js"
+      },
+     "repository": {
+          "type": "git",
+          "url": "git+https://github.com/manan-Abdul1/todo-list-app.git"
+      },
+      "author": "",
+      "license": "ISC",
+      "bugs": {
+          "url": "https://github.com/manan-Abdul1/todo-list-app/issues"
+     },
+      "homepage": "https://github.com/manan-Abdul1/todo-list-app#readme"
+  }
