--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
           "backend": "cd backend; nodemon server.js",
           "build": "echo \"No build specified\" && exit 1",
           "test": "echo \"No test specified\" && exit 1",
-          "start": "cd frontend; npm index.js"
+          "start": "npm index.js"
       },
      "repository": {
           "type": "git",
