--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
       "scripts": {
           "frontend": "cd frontend; npm start",
           "backend": "cd backend; nodemon server.js",
-          "build": "echo \"No build specified\" && exit 1",
+          "build": "cd frontend; npm run build",
           "test": "echo \"No test specified\" && exit 1",
           "start": "npm index.js"
       },
