--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
           "backend": "cd backend; nodemon server.js",
           "build": "cd frontend; npm run build",
           "test": "echo \"No test specified\" && exit 1",
-          "start": "node index.js"
+          "start": "cd backend; nodemon server.js"
       },
      "repository": {
           "type": "git",
