--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
           "build": "cd frontend; npm run build",
           "test": "echo \"No test specified\" && exit 1",
           "start": "cd backend; node server.js",
-          "dev": "concurrently \"npm start\" \"npm run frontend\" ",
+          "dev": "concurrently \"npm start\" \"npm run frontend\""
       },
      "repository": {
           "type": "git",
