--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
       "version": "1.0.0",
       "description": "",
       "scripts": {
-          "server": "nodemon server.js",
           "frontend": "cd frontend; npm start",
           "backend": "cd backend; nodemon server.js",
-          "start": "cd backend; node server.js",
-          "dev": "concurrently \"npm start\" \"npm run frontend\""
+          "start": "cd backend; node server.js"
       },
      "repository": {
           "type": "git",
